SERVER-91318 Prevent config shard CatalogCache refresh deadlock (#23297)

GitOrigin-RevId: bfae79660ac0c737ef04517fc3e560d7861243bc