src/mongo/db/s/shard_server_catalog_cache_loader.cpp
@@ -577,10 +577,9 @@ SemiFuture<CollectionAndChangedChunks> ShardServerCatalogCacheLoader::getChunksS
 }
 
 SemiFuture<DatabaseType> ShardServerCatalogCacheLoader::getDatabase(const DatabaseName& dbName) {
-    // The admin and config database have fixed metadata that does not need to be refreshed.
-    if (dbName.isAdminDB() || dbName.isConfigDB()) {
-        return DatabaseType(dbName, ShardId::kConfigServerId, DatabaseVersion::makeFixed());
-    }
+    tassert(9131801,
+            "Unexpected request for 'admin' or 'config' database, which have fixed metadata",
+            !dbName.isAdminDB() && !dbName.isConfigDB());
 
     const auto [isPrimary, term] = [&] {
         stdx::lock_guard<Latch> lock(_mutex);
